--- a/requirements.txt
+++ b/requirements.txt
@@ -5,12 +5,15 @@ charset-normalizer==3.3.2
 Django==5.0.6
 djangorestframework==3.15.1
 drf-spectacular==0.27.2
+drf-yasg==1.21.7
 idna==3.7
 inflection==0.5.1
 jsonschema==4.22.0
 jsonschema-specifications==2023.12.1
+packaging==24.0
 PyJWT==2.8.0
 python-dotenv==1.0.1
+pytz==2024.1
 PyYAML==6.0.1
 referencing==0.35.1
 requests==2.32.3
